--- a/2.1-databases/models_list_displaying/templates/books/catalog.html
+++ b/2.1-databases/models_list_displaying/templates/books/catalog.html
@@ -20,7 +20,7 @@
                 {% for book in books %}
                 <div class="book col-md-4">
                     <h4>
-                        <a href="{% url 'show_book' book.slug %}">{{ book.name }}</a>
+                        <a href="{% url 'show_book_name' book.slug %}">{{ book.name }}</a>
                     </h4>
                     <p>Автор: {{ book.author }}</p>
                     <p>Дата публикации:<br>{{ book.pub_date }}</p>
